samples/glossentry/invalid/R6.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>Term</glossterm>
</glossentry>